--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
             <div class="col-lg-6 px-5 text-end">
                 <small>Follow us:</small>
                 <a class="text-body ms-3" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-twitter"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-linkedin-in"></i></a>
+                <a class="text-body ms-3" href=""><i class="fab fa-youtube"></i></a>
                 <a class="text-body ms-3" href=""><i class="fab fa-instagram"></i></a>
             </div>
         </div>
@@ -119,7 +118,7 @@
                         <img class="img-fluid mb-4" src="img/icon-2.png" alt="">
                         <h4 class="mb-3">Pengaduan Masyarakat</h4>
                         <p class="mb-4">Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="#">Link Pengaduan</a>
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="https://forms.gle/itnK1snZ9e93pTJv7" target="_blank">Link Pengaduan</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -144,7 +143,7 @@
                     <p class="text-white mb-0">Jika terdapat kritik & saran untuk pembangunan Desa Pagar Banyu agar lebih baik, silahkan klik tombol berikut</p>
                 </div>
                 <div class="col-md-5 text-md-end wow fadeIn" data-wow-delay="0.5s">
-                    <a class="btn btn-lg btn-secondary rounded-pill py-3 px-5" href="">Kritik & Saran</a>
+                    <a class="btn btn-lg btn-secondary rounded-pill py-3 px-5" href="https://forms.gle/o6X6cEMAoARemd8R8" target="_blank">Kritik & Saran</a>
                 </div>
             </div>
         </div>
@@ -168,6 +167,17 @@
                         <div class="ms-3">
                             <h5 class="mb-1">Dery geovisi</h5>
                             <span>B1A019357</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-item position-relative bg-white p-5 mt-4">
+                    <i class="fa fa-quote-left fa-3x text-primary position-absolute top-0 start-0 mt-n4 ms-5"></i>
+                    <p class="mb-4">Mahasiswa dari Program Studi Informatika Fakultas Teknik</p>
+                    <div class="d-flex align-items-center">
+                        <img class="flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg" alt="">
+                        <div class="ms-3">
+                            <h5 class="mb-1">Mufti Restu Mahesa</h5>
+                            <span>G1A019014</span>
                         </div>
                     </div>
                 </div>
