--- a/pemerintahan.html
+++ b/pemerintahan.html
@@ -56,8 +56,7 @@
             <div class="col-lg-6 px-5 text-end">
                 <small>Follow us:</small>
                 <a class="text-body ms-3" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-twitter"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-linkedin-in"></i></a>
+                <a class="text-body ms-3" href=""><i class="fab fa-youtube"></i></a>
                 <a class="text-body ms-3" href=""><i class="fab fa-instagram"></i></a>
             </div>
         </div>
@@ -138,7 +137,7 @@
                     <h4 class="text-primary">Sekretaris Desa</h4>
                 </div>
                 <div class="col-4">
-                    <h4 class="text-secondary">?????</h4>
+                    <h4 class="text-secondary">Rinsiswanto</h4>
                 </div>
             </div>
             <div class="row g-5 justify-content-center py-2">
@@ -148,7 +147,7 @@
                     <h4 class="text-primary">KASI Pemerintah</h4>
                 </div>
                 <div class="col-4">
-                    <h4 class="text-secondary">?????</h4>
+                    <h4 class="text-secondary">Rise Purnamasari, S.Pd</h4>
                 </div>
             </div>
             <div class="row g-5 justify-content-center py-2">
@@ -158,7 +157,7 @@
                     <h4 class="text-primary">KASI Kesejahteraan</h4>
                 </div>
                 <div class="col-4">
-                    <h4 class="text-secondary">?????</h4>
+                    <h4 class="text-secondary">Ming Siktomo, S.E</h4>
                 </div>
             </div>
             <div class="row g-5 justify-content-center py-2">
@@ -168,7 +167,7 @@
                     <h4 class="text-primary">KASI Pelayanan</h4>
                 </div>
                 <div class="col-4">
-                    <h4 class="text-secondary">?????</h4>
+                    <h4 class="text-secondary">Eftin Hadi</h4>
                 </div>
             </div>
             <div class="row g-5 justify-content-center py-2">
@@ -178,7 +177,7 @@
                     <h4 class="text-primary">KAUR Perencanaan</h4>
                 </div>
                 <div class="col-4">
-                    <h4 class="text-secondary">?????</h4>
+                    <h4 class="text-secondary">Parlin Siagian</h4>
                 </div>
             </div>
             <div class="row g-5 justify-content-center py-2">
@@ -188,7 +187,7 @@
                     <h4 class="text-primary">KAUR Keuangan</h4>
                 </div>
                 <div class="col-4">
-                    <h4 class="text-secondary">?????</h4>
+                    <h4 class="text-secondary">Didi Sugianto</h4>
                 </div>
             </div>
             <div class="row g-5 justify-content-center py-2">
@@ -198,12 +197,11 @@
                     <h4 class="text-primary">KAUR Tata Usaha</h4>
                 </div>
                 <div class="col-4">
-                    <h4 class="text-secondary">?????</h4>
+                    <h4 class="text-secondary">Indil Aliamin</h4>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="container-xxl py-5">
         <div class="container">
             <h2 class="text-secondary text-center pb-2">Struktur Kepengurusan BPD</h2>
@@ -214,52 +212,51 @@
                     <h4 class="text-primary">Ketua</h4>
                 </div>
                 <div class="col-4">
-                    <h4 class="text-secondary">?????</h4>
+                    <h4 class="text-secondary">Suhanto</h4>
                 </div>
             </div>
             <div class="row g-5 justify-content-center py-2">
                 <div class="col-lg-2">
                 </div>
                 <div class="col-4">
-                    <h4 class="text-primary">?????</h4>
+                    <h4 class="text-primary">Anggota</h4>
                 </div>
                 <div class="col-4">
-                    <h4 class="text-secondary">?????</h4>
+                    <h4 class="text-secondary">Ario Susanto</h4>
                 </div>
             </div>
             <div class="row g-5 justify-content-center py-2">
                 <div class="col-lg-2">
                 </div>
                 <div class="col-4">
-                    <h4 class="text-primary">?????</h4>
+                    <h4 class="text-primary">Anggota</h4>
                 </div>
                 <div class="col-4">
-                    <h4 class="text-secondary">?????</h4>
+                    <h4 class="text-secondary">Wargito</h4>
                 </div>
             </div>
             <div class="row g-5 justify-content-center py-2">
                 <div class="col-lg-2">
                 </div>
                 <div class="col-4">
-                    <h4 class="text-primary">?????</h4>
+                    <h4 class="text-primary">Anggota</h4>
                 </div>
                 <div class="col-4">
-                    <h4 class="text-secondary">?????</h4>
+                    <h4 class="text-secondary">Muhammad Noprizal</h4>
                 </div>
             </div>
             <div class="row g-5 justify-content-center py-2">
                 <div class="col-lg-2">
                 </div>
                 <div class="col-4">
-                    <h4 class="text-primary">?????</h4>
+                    <h4 class="text-primary">Anggota</h4>
                 </div>
                 <div class="col-4">
-                    <h4 class="text-secondary">?????</h4>
+                    <h4 class="text-secondary">Reva Setiawati</h4>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="container-xxl py-5">
         <div class="container">
             <h2 class="text-secondary text-center pb-2">Struktur Kepengurusan BUMDES SEPAKAT</h2>
@@ -361,6 +358,61 @@
                             <li>Rustan Efendi</li>
                         </ol>
                     </h4>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-xxl py-5">
+        <div class="container">
+            <h2 class="text-secondary text-center pb-2">Struktur Lembaga Adat</h2>
+            <div class="row g-5 justify-content-center py-2">
+                <div class="col-lg-2">
+                </div>
+                <div class="col-4">
+                    <h4 class="text-primary">Ketua</h4>
+                </div>
+                <div class="col-4">
+                    <h4 class="text-secondary">Adianto</h4>
+                </div>
+            </div>
+            <div class="row g-5 justify-content-center py-2">
+                <div class="col-lg-2">
+                </div>
+                <div class="col-4">
+                    <h4 class="text-primary">Anggota</h4>
+                </div>
+                <div class="col-4">
+                    <h4 class="text-secondary">Efrianto</h4>
+                </div>
+            </div>
+            <div class="row g-5 justify-content-center py-2">
+                <div class="col-lg-2">
+                </div>
+                <div class="col-4">
+                    <h4 class="text-primary">Anggota</h4>
+                </div>
+                <div class="col-4">
+                    <h4 class="text-secondary">Arsal Mubin</h4>
+                </div>
+            </div>
+            <div class="row g-5 justify-content-center py-2">
+                <div class="col-lg-2">
+                </div>
+                <div class="col-4">
+                    <h4 class="text-primary">Anggota</h4>
+                </div>
+                <div class="col-4">
+                    <h4 class="text-secondary">Mahmuda</h4>
+                </div>
+            </div>
+            <div class="row g-5 justify-content-center py-2">
+                <div class="col-lg-2">
+                </div>
+                <div class="col-4">
+                    <h4 class="text-primary">Anggota</h4>
+                </div>
+                <div class="col-4">
+                    <h4 class="text-secondary">Purwanti</h4>
                 </div>
             </div>
         </div>
