--- a/profil-desa.html
+++ b/profil-desa.html
@@ -53,8 +53,7 @@
             <div class="col-lg-6 px-5 text-end">
                 <small>Follow us:</small>
                 <a class="text-body ms-3" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-twitter"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-linkedin-in"></i></a>
+                <a class="text-body ms-3" href=""><i class="fab fa-youtube"></i></a>
                 <a class="text-body ms-3" href=""><i class="fab fa-instagram"></i></a>
             </div>
         </div>
