update sejarah desa

--- a/pemerintahan.html
+++ b/pemerintahan.html
@@ -108,8 +108,26 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h3 class="display-5 mb-4">Visi Misi</h3>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
-                        eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
+                    <h5>Visi</h5>
+                    <p>
+                        “ Terwujudnya Desa Pagar Banyu yang MAJU (Mandiri, Agamis, Jujur dan Unggul) ”
+                    </p>
+                    <h5>Misi</h5>
+                    <ol>
+                        <li>Meningkatkan profesionalisme pelayanan publik tanpa keluhan</li>
+                        <li>Meningkatkan kualitas sumber daya manusia dan ekonomi yang berdaya saing</li>
+                        <li>Meningkatkan kualitas pendidikan dengan memberikan program bantuan kepada anak (SD, SMP & SMA) yang berprestasi</li>
+                        <li>Menumbuhkembangkan Usaha Mikro dan Menengah dengan membuka peluang usaha dan memfasilitasi bantuan-bantuan modal yang dibutuhkan</li>
+                        <li>Optimalisasi kegiatan pengajian dan keagamaan dengan memberikan fasilitas terbaik kepada Majelis Taklim dan Pengurus Masjid</li>
+                        <li>Pembangunan yang berkesinambungan dengan mengedepankan kebutuhan masyarakat banyak secara musyawarah dan bergotong royong</li>
+                        <li>Menggali PAD dengan cara memperbaiki tatakelola dan adminstrasi</li>
+                        <li>Mengembangkan dan mempertahankan nilai-nilai seni, tradisi, budaya dan kearifan lokal</li>
+                        <li>Membantu dan memfasilitasi potensi keahlian yang dimiliki masyarakat untuk membantu mensejahterakan masyarakat desa</li>
+                        <li>Menjalin silaturahmi yang erat antar masyarakat desa</li>
+                    </ol>
+                    <h5>Harapan Untuk Desa</h5>
+                    <p>
+                        “ Harapan kedepanya semoga desa Pagar Banyu menjadi desa yang akan terus MAJU+ ERAT. Maksudnya (Mandiri, Agamis, Jujur ,Unggul)  dan erat dalam hal menjalin silahturahmi antar masyarakat ”
                     </p>
                 </div>
             </div>
