--- a/profil-desa.html
+++ b/profil-desa.html
@@ -102,8 +102,15 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h3 class="display-5 mb-4">Tentang Desa Pagar Banyu</h3>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                    <h3 class="display-5 mb-4">Sejarah Desa Pagar Banyu</h3>
+                    <p style="text-indent: 40px; text-align: justify;">Sebelum tahun 1927 desa Pagar Banyu letak tempatnya ini terletak diantara marga Seginim, yang bernama desa Pagar Batu. Setelah tahun 1927 nenek moyang desa Pagar Batu pindah ke Kedurang dan menamakan tempat yang mereka kediami dengan nama desa Pagar Banyu. Sampai sekarang adat istiadat Serawai menjadi adat yang dikuti masyarakat Kedurang yang mana desa Pagar Banyu juga termasuk salah satunya. Dan pada tahun 1959 desa Pagar Banyu baru diakui menjadi desa Pagar Banyu dengan Kepala Dusun (Penggawa) ‘‘ MASIP’’ sampai pada tahun 1969 dan kemudian penggantian Kepala Dusun (Penggawa) dari MASIP ke  ILYAS  sampai tahun 1975, dari ILYAS Ke MATUSIR sampai Tahun 1983.
+                    </p>
+                    <p style="text-indent: 40px; text-align: justify;">
+                        Pada tahun 1983 dari pihak kecamatan dan kabupaten baru mengakui secara resmi desa Pagar Banyu, kemudian dilakukan pemilihan kepala desa secara langsung atau demokrasi dengan kepala desa pertama YUHADI sampai dengan tahun 1991, dan dilakukan pemilihan kepala desa kedua tahun 1991 dan terpilih YUHASDIN sampai Tahun 1999, kemudian dilakukan pemilihan kepala desa ke tiga dan terpilih JUHARMAN sampai tahun 2007. pada tahun 2007 dilakukan pemilhan kepala desa ke empat dan terpilih  INDIARTO sampai dengan 2019. Selanjutnya pada tahun 2020 sampai dengan september 2021 kepemimpinan nya dipindahkan kepada PJS kecamatan dan terakhir di bulan september 2021 dilakukan pemilihan kepala desa secara demokrasi dan dilantik di bulan yang sama yang dimana terpilihlah BONIKER SYARIAL sebagai kepala desa Pagar Banyu yang baru dan akan menjabat sampai dengan masa jabatan selesai.
+                    </p>
+                    <p style="text-indent: 40px; text-align: justify;">
+                        Terakhir desa Pagar Banyu yang merupakan tempat yang dikediami oleh  nenek moyang yang berasal dari desa Pagar Batu,  Tanah Kepemilikan diperoleh dari hiba masyarakat  desa Betungan.
+                    </p>
                 </div>
             </div>
         </div>
