--- a/pemerintahan.html
+++ b/pemerintahan.html
@@ -55,9 +55,9 @@
             </div>
             <div class="col-lg-6 px-5 text-end">
                 <small>Follow us:</small>
-                <a class="text-body ms-3" href=""><i class="fab fa-facebook-f"></i></a>
+                <a class="text-body ms-3" href="https://www.facebook.com/profile.php?id=100084469845368"><i class="fab fa-facebook-f"></i></a>
                 <a class="text-body ms-3" href=""><i class="fab fa-youtube"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-instagram"></i></a>
+                <a class="text-body ms-3" href="https://instagram.com/desa_pagar_banyu?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
             </div>
         </div>
 
@@ -442,17 +442,11 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h1 class="fw-bold text-primary mb-4">Pagar Banyu</h1>
-                    <p>Sebuah desa yang berlokasi di Kecamatan Kedurang Ilir Kabupaten Bengkulu Selatan Provinsi
-                        Bengkulu</p>
+                    <p>Sebuah desa yang berlokasi di Kecamatan Kedurang Ilir Kabupaten Bengkulu Selatan Provinsi Bengkulu</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i
-                                class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i
-                                class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-0" href=""><i
-                                class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://instagram.com/desa_pagar_banyu?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://www.facebook.com/profile.php?id=100084469845368"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6"></div>
@@ -460,8 +454,8 @@
                 <div class="col-lg-4 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
                     <p><i class="fa fa-map-marker-alt me-3"></i>Desa Pagar Banyu</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p><i class="fa fa-phone-alt me-3"></i>0811-7383-113</p>
+                    <p><i class="fa fa-envelope me-3"></i>pagarbanyu44@gmail.com</p>
                 </div>
             </div>
         </div>
