--- a/pemerintahan.html
+++ b/pemerintahan.html
@@ -56,7 +56,7 @@
             <div class="col-lg-6 px-5 text-end">
                 <small>Follow us:</small>
                 <a class="text-body ms-3" href="https://www.facebook.com/profile.php?id=100084469845368"><i class="fab fa-facebook-f"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-youtube"></i></a>
+                <a class="text-body ms-3" href="https://www.youtube.com/channel/UCHzJZ7xvKtmd1XHWfHVObyg"><i class="fab fa-youtube"></i></a>
                 <a class="text-body ms-3" href="https://instagram.com/desa_pagar_banyu?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
             </div>
         </div>
@@ -74,8 +74,8 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="profil-desa.html" class="nav-item nav-link">Profil Desa</a>
-                    <a href="pemerintahan.html" class="nav-item nav-link active">Pemerintahan</a>
+                    <a href="Profil-desa.html" class="nav-item nav-link">Profil Desa</a>
+                    <a href="Pemerintahan.html" class="nav-item nav-link active">Pemerintahan</a>
                     <a href="#" class="nav-item nav-link">Galeri</a>
                 </div>
             </div>
@@ -446,7 +446,7 @@
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://instagram.com/desa_pagar_banyu?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://www.facebook.com/profile.php?id=100084469845368"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://www.youtube.com/channel/UCHzJZ7xvKtmd1XHWfHVObyg"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6"></div>
