--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
             <div class="col-lg-6 px-5 text-end">
                 <small>Follow us:</small>
                 <a class="text-body ms-3" href="https://www.facebook.com/profile.php?id=100084469845368"><i class="fab fa-facebook-f"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-youtube"></i></a>
+                <a class="text-body ms-3" href="https://www.youtube.com/channel/UCHzJZ7xvKtmd1XHWfHVObyg"><i class="fab fa-youtube"></i></a>
                 <a class="text-body ms-3" href="https://instagram.com/desa_pagar_banyu?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
             </div>
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-light py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
             <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-                <h1 class="fw-bold text-primary m-0" style="float: left;">Pa<span class="text-secondary">g</span>ar&nbsp;</h1>
-                <h1 class="fw-bold text-secondary m-0">Ba<span class="text-primary">n</span>yu</h1>
+                <h1 class="fw-bold text-primary m-0" style="float: left;">Pagar Banyu</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -64,8 +63,8 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="profil-desa.html" class="nav-item nav-link">Profil Desa</a>
-                    <a href="pemerintahan.html" class="nav-item nav-link">Pemerintahan</a>
+                    <a href="Profil-desa.html" class="nav-item nav-link">Profil Desa</a>
+                    <a href="Pemerintahan.html" class="nav-item nav-link">Pemerintahan</a>
                     <a href="#" class="nav-item nav-link">Galeri</a>
                 </div>
             </div>
@@ -83,10 +82,11 @@
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
-                                <div class="col-lg-7">
-                                    <h1 class="display-2 mb-5 animated slideInDown text-white">Desa Pagar Banyu</h1>
+                                <div class="col-lg-10">
+                                    <h3 class="display-2 animated slideInDown text-white">Desa Pagar Banyu</h3>
+                                    <h3 class="mb-5 animated slideInDown text-white">Kecamatan Kedurang Ilir Kabupaten Bengkulu Selatan</h3>
                                     <a href="#feature" class="btn btn-primary rounded-pill py-sm-3 px-sm-5">Feature</a>
-                                    <a href="#about" class="btn btn-secondary rounded-pill py-sm-3 px-sm-5 ms-3">About Us</a>
+                                    <a href="#about" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 ms-3">About Us</a>
                                 </div>
                             </div>
                         </div>
@@ -109,7 +109,6 @@
                     <div class="bg-white text-center h-100 p-4 p-xl-5">
                         <img class="img-fluid mb-4" src="img/icon-1.png" alt="">
                         <h4 class="mb-3">Profil Desa</h4>
-                        <p class="mb-4">Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
                         <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="profil-desa.html">Lihat Lebih</a>
                     </div>
                 </div>
@@ -117,7 +116,6 @@
                     <div class="bg-white text-center h-100 p-4 p-xl-5">
                         <img class="img-fluid mb-4" src="img/icon-2.png" alt="">
                         <h4 class="mb-3">Pengaduan Masyarakat</h4>
-                        <p class="mb-4">Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
                         <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="https://forms.gle/itnK1snZ9e93pTJv7" target="_blank">Link Pengaduan</a>
                     </div>
                 </div>
@@ -125,7 +123,6 @@
                     <div class="bg-white text-center h-100 p-4 p-xl-5">
                         <img class="img-fluid mb-4" src="img/icon-3.png" alt="">
                         <h4 class="mb-3">Pemerintahan Desa</h4>
-                        <p class="mb-4">Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
                         <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="pemerintahan.html">Lihat Lebih</a>
                     </div>
                 </div>                
@@ -143,7 +140,7 @@
                     <p class="text-white mb-0">Jika terdapat kritik & saran untuk pembangunan Desa Pagar Banyu agar lebih baik, silahkan klik tombol berikut</p>
                 </div>
                 <div class="col-md-5 text-md-end wow fadeIn" data-wow-delay="0.5s">
-                    <a class="btn btn-lg btn-secondary rounded-pill py-3 px-5" href="https://forms.gle/o6X6cEMAoARemd8R8" target="_blank">Kritik & Saran</a>
+                    <a class="btn btn-lg btn-primary rounded-pill py-3 px-5 bg-white text-dark" href="https://forms.gle/o6X6cEMAoARemd8R8" target="_blank">Kritik & Saran</a>
                 </div>
             </div>
         </div>
@@ -163,7 +160,7 @@
                     <i class="fa fa-quote-left fa-3x text-primary position-absolute top-0 start-0 mt-n4 ms-5"></i>
                     <p class="mb-4">Mahasiswa dari Program Studi Ilmu Hukum Fakultas Hukum</p>
                     <div class="d-flex align-items-center">
-                        <img class="flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg" alt="">
+                        <img class="flex-shrink-0 rounded-circle" src="img/man.png" alt="">
                         <div class="ms-3">
                             <h5 class="mb-1">Dery geovisi</h5>
                             <span>B1A019357</span>
@@ -174,7 +171,7 @@
                     <i class="fa fa-quote-left fa-3x text-primary position-absolute top-0 start-0 mt-n4 ms-5"></i>
                     <p class="mb-4">Mahasiswa dari Program Studi Informatika Fakultas Teknik</p>
                     <div class="d-flex align-items-center">
-                        <img class="flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg" alt="">
+                        <img class="flex-shrink-0 rounded-circle" src="img/man.png" alt="">
                         <div class="ms-3">
                             <h5 class="mb-1">Mufti Restu Mahesa</h5>
                             <span>G1A019014</span>
@@ -185,7 +182,7 @@
                     <i class="fa fa-quote-left fa-3x text-primary position-absolute top-0 start-0 mt-n4 ms-5"></i>
                     <p class="mb-4">Mahasiswa dari Program Studi Penjas Fakultas Keguruan & Ilmu Pendidikan</p>
                     <div class="d-flex align-items-center">
-                        <img class="flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg" alt="">
+                        <img class="flex-shrink-0 rounded-circle" src="img/man.png" alt="">
                         <div class="ms-3">
                             <h5 class="mb-1">Andika Aprianto</h5>
                             <span>A1H019054 </span>
@@ -196,7 +193,7 @@
                     <i class="fa fa-quote-left fa-3x text-primary position-absolute top-0 start-0 mt-n4 ms-5"></i>
                     <p class="mb-4">Mahasiswa dari Program Studi Perpustakaan Dan Sains Informasi Fakultas Sosial & Ilmu Politik</p>
                     <div class="d-flex align-items-center">
-                        <img class="flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg" alt="">
+                        <img class="flex-shrink-0 rounded-circle" src="img/man.png" alt="">
                         <div class="ms-3">
                             <h5 class="mb-1">Muhammad Aliffadhilah Hanif</h5>
                             <span>D1B019044 </span>
@@ -207,7 +204,7 @@
                     <i class="fa fa-quote-left fa-3x text-primary position-absolute top-0 start-0 mt-n4 ms-5"></i>
                     <p class="mb-4">Mahasiswa dari Program Studi Pendidikan Bahasa Inggris Fakultas Keguruan & Ilmu Pendidikan</p>
                     <div class="d-flex align-items-center">
-                        <img class="flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" alt="">
+                        <img class="flex-shrink-0 rounded-circle" src="img/women.png" alt="">
                         <div class="ms-3">
                             <h5 class="mb-1">Vitaloka Siwi Utami</h5>
                             <span>A1B019046 </span>
@@ -218,7 +215,7 @@
                     <i class="fa fa-quote-left fa-3x text-primary position-absolute top-0 start-0 mt-n4 ms-5"></i>
                     <p class="mb-4">Mahasiswa dari Program Studi Ilmu Tanah Fakultas Pertanian</p>
                     <div class="d-flex align-items-center">
-                        <img class="flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" alt="">
+                        <img class="flex-shrink-0 rounded-circle" src="img/women.png" alt="">
                         <div class="ms-3">
                             <h5 class="mb-1">Riske Laras Alvenisa</h5>
                             <span>E1F019013 </span>
@@ -229,7 +226,7 @@
                     <i class="fa fa-quote-left fa-3x text-primary position-absolute top-0 start-0 mt-n4 ms-5"></i>
                     <p class="mb-4">Mahasiswa dari Program Studi Kimia Fakultas Matematika & Ilmu Pengetahuan Alam</p>
                     <div class="d-flex align-items-center">
-                        <img class="flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" alt="">
+                        <img class="flex-shrink-0 rounded-circle" src="img/women.png" alt="">
                         <div class="ms-3">
                             <h5 class="mb-1">Hanna Sitohang</h5>
                             <span>F1B019007 </span>
@@ -240,7 +237,7 @@
                     <i class="fa fa-quote-left fa-3x text-primary position-absolute top-0 start-0 mt-n4 ms-5"></i>
                     <p class="mb-4">Mahasiswa dari Program Studi Ilmu hukum Fakultas Hukum</p>
                     <div class="d-flex align-items-center">
-                        <img class="flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" alt="">
+                        <img class="flex-shrink-0 rounded-circle" src="img/women.png" alt="">
                         <div class="ms-3">
                             <h5 class="mb-1">Metina Anjelina</h5>
                             <span>B1A019442 </span>
@@ -251,7 +248,7 @@
                     <i class="fa fa-quote-left fa-3x text-primary position-absolute top-0 start-0 mt-n4 ms-5"></i>
                     <p class="mb-4">Mahasiswa dari Program Studi Akuntansi Fakultas Ekonomi & Bisnis</p>
                     <div class="d-flex align-items-center">
-                        <img class="flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" alt="">
+                        <img class="flex-shrink-0 rounded-circle" src="img/women.png" alt="">
                         <div class="ms-3">
                             <h5 class="mb-1">Syawalia Azizah</h5>
                             <span>C1C019029 </span>
@@ -274,7 +271,7 @@
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://instagram.com/desa_pagar_banyu?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://www.facebook.com/profile.php?id=100084469845368"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://www.youtube.com/channel/UCHzJZ7xvKtmd1XHWfHVObyg"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6"></div>
