--- a/profil-desa.html
+++ b/profil-desa.html
@@ -53,15 +53,15 @@
             <div class="col-lg-6 px-5 text-end">
                 <small>Follow us:</small>
                 <a class="text-body ms-3" href="https://www.facebook.com/profile.php?id=100084469845368"><i class="fab fa-facebook-f"></i></a>
-                <a class="text-body ms-3" href=""><i class="fab fa-youtube"></i></a>
+                <a class="text-body ms-3" href="https://www.youtube.com/channel/UCHzJZ7xvKtmd1XHWfHVObyg"><i class="fab fa-youtube"></i></a>
                 <a class="text-body ms-3" href="https://instagram.com/desa_pagar_banyu?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
             </div>
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-light py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
             <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-                <h1 class="fw-bold text-primary m-0" style="float: left;">Pa<span class="text-secondary">g</span>ar&nbsp;</h1>
-                <h1 class="fw-bold text-secondary m-0">Ba<span class="text-primary">n</span>yu</h1>
+                <h1 class="fw-bold text-primary m-0" style="float: left;">Pa<span class="text-primary">g</span>ar&nbsp;</h1>
+                <h1 class="fw-bold text-primary m-0">Ba<span class="text-primary">n</span>yu</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -69,8 +69,8 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="profil-desa.html" class="nav-item nav-link active">Profil Desa</a>
-                    <a href="pemerintahan.html" class="nav-item nav-link">Pemerintahan</a>
+                    <a href="Profil-desa.html" class="nav-item nav-link active">Profil Desa</a>
+                    <a href="Pemerintahan.html" class="nav-item nav-link">Pemerintahan</a>
                     <a href="#" class="nav-item nav-link">Galeri</a>
                 </div>
             </div>
@@ -122,7 +122,7 @@
             <h3 class="text-primary">Data Statis</h3>
             <div class="row g-5">
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Luas dan Batas Wilayah</h4>
+                    <h4 class="text-primary">Luas dan Batas Wilayah</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -154,7 +154,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Jarak Pusat Pemerintah Desa</h4>
+                    <h4 class="text-primary">Jarak Pusat Pemerintah Desa</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -181,7 +181,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Kondisi Geografis</h4>
+                    <h4 class="text-primary">Kondisi Geografis</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -235,7 +235,7 @@
             <h3 class="text-primary">Luas Wilayah / Peruntukan Lahan</h3>
             <div class="row g-5">
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Tanah Sawah</h4>
+                    <h4 class="text-primary">Tanah Sawah</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -262,7 +262,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Tanah Kering</h4>
+                    <h4 class="text-primary">Tanah Kering</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -285,7 +285,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Tanah Kering</h4>
+                    <h4 class="text-primary">Tanah Kering</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -308,7 +308,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Tanah Hutan</h4>
+                    <h4 class="text-primary">Tanah Hutan</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -347,7 +347,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Tanah Perkebunan</h4>
+                    <h4 class="text-primary">Tanah Perkebunan</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -362,7 +362,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Tanah Keperluan Fasilitas Umum</h4>
+                    <h4 class="text-primary">Tanah Keperluan Fasilitas Umum</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -389,7 +389,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Tanah Keperluan Fasilitas Sosial</h4>
+                    <h4 class="text-primary">Tanah Keperluan Fasilitas Sosial</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -423,7 +423,7 @@
             <h3 class="text-primary">Data Kependudukan & Mata Pencaharian</h3>
             <div class="row g-5">
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Jumlah Penduduk</h4>
+                    <h4 class="text-primary">Jumlah Penduduk</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -434,7 +434,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Jumlah Kepala Keluarga</h4>
+                    <h4 class="text-primary">Jumlah Kepala Keluarga</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -445,7 +445,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Jumlah Penduduk Menurut Jenis Kelamin</h4>
+                    <h4 class="text-primary">Jumlah Penduduk Menurut Jenis Kelamin</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -460,7 +460,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Jumlah Penduduk Menurut Agama & Kepercayaan</h4>
+                    <h4 class="text-primary">Jumlah Penduduk Menurut Agama & Kepercayaan</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -491,7 +491,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Jumlah Penduduk Menurut Usia</h4>
+                    <h4 class="text-primary">Jumlah Penduduk Menurut Usia</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -514,7 +514,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Jumlah Penduduk Menurut Mata Pencaharian</h4>
+                    <h4 class="text-primary">Jumlah Penduduk Menurut Mata Pencaharian</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -553,7 +553,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Jumlah Penduduk Menurut Mata Pencaharian</h4>
+                    <h4 class="text-primary">Jumlah Penduduk Menurut Mata Pencaharian</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -588,7 +588,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Jumlah Pencari Kerja</h4>
+                    <h4 class="text-primary">Jumlah Pencari Kerja</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -603,7 +603,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Rata-rata Luas Tanah Pertanian</h4>
+                    <h4 class="text-primary">Rata-rata Luas Tanah Pertanian</h4>
                     <table class="table table-borderless table-luas">
                         <div class="tbody">
                             <tr>
@@ -614,7 +614,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4 class="text-secondary">Mutasi Penduduk</h4>
+                    <h4 class="text-primary">Mutasi Penduduk</h4>
                     <table class="table table-bordered">
                         <div class="tbody">
                             <tr class="text-center">
@@ -664,7 +664,7 @@
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://instagram.com/desa_pagar_banyu?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://www.facebook.com/profile.php?id=100084469845368"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://www.youtube.com/channel/UCHzJZ7xvKtmd1XHWfHVObyg"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6"></div>
