--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-light py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-            <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
+            <a href="Index.html" class="navbar-brand ms-4 ms-lg-0">
                 <h1 class="fw-bold text-primary m-0" style="float: left;">Pagar Banyu</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -62,7 +62,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="Index.html" class="nav-item nav-link active">Home</a>
                     <a href="Profil-desa.html" class="nav-item nav-link">Profil Desa</a>
                     <a href="Pemerintahan.html" class="nav-item nav-link">Pemerintahan</a>
                     <a href="#" class="nav-item nav-link">Galeri</a>
@@ -109,7 +109,7 @@
                     <div class="bg-white text-center h-100 p-4 p-xl-5">
                         <img class="img-fluid mb-4" src="img/icon-1.png" alt="">
                         <h4 class="mb-3">Profil Desa</h4>
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="profil-desa.html">Lihat Lebih</a>
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="Profil-desa.html">Lihat Lebih</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
