--- a/pemerintahan.html
+++ b/pemerintahan.html
@@ -62,7 +62,7 @@
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-light py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-            <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
+            <a href="Index.html" class="navbar-brand ms-4 ms-lg-0">
                 <h1 class="fw-bold text-primary m-0" style="float: left;">Pa<span
                         class="text-secondary">g</span>ar&nbsp;</h1>
                 <h1 class="fw-bold text-secondary m-0">Ba<span class="text-primary">n</span>yu</h1>
@@ -73,7 +73,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
+                    <a href="Index.html" class="nav-item nav-link">Home</a>
                     <a href="Profil-desa.html" class="nav-item nav-link">Profil Desa</a>
                     <a href="Pemerintahan.html" class="nav-item nav-link active">Pemerintahan</a>
                     <a href="#" class="nav-item nav-link">Galeri</a>
