--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="bg-white text-center h-100 p-4 p-xl-5">
                         <img class="img-fluid mb-4" src="img/icon-3.png" alt="">
                         <h4 class="mb-3">Pemerintahan Desa</h4>
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="pemerintahan.html">Lihat Lebih</a>
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="Pemerintahan.html">Lihat Lebih</a>
                     </div>
                 </div>                
             </div>
