--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Desa Pagar Banyu</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="desa pagar banyu" name="keywords">
+    <meta content="Website Profil Desa Pagar Banyu Kecamatan Kedurang Ilir Kabupaten Bengkulu Selatan" name="description">
 
     <!-- Favicon -->
     <link href="img/logo.png" rel="icon">
