--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    <meta name="google-site-verification" content="m1P9ZukFwWQvNYS_XtSirQh8Oqr5SlqbWBDWhOoE8eo" />
 
     <!-- Favicon -->
     <link href="img/logo.png" rel="icon">
