--- a/pemerintahan.html
+++ b/pemerintahan.html
@@ -63,9 +63,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
             <a href="Index.html" class="navbar-brand ms-4 ms-lg-0">
-                <h1 class="fw-bold text-primary m-0" style="float: left;">Pa<span
-                        class="text-secondary">g</span>ar&nbsp;</h1>
-                <h1 class="fw-bold text-secondary m-0">Ba<span class="text-primary">n</span>yu</h1>
+                <h1 class="fw-bold text-primary m-0" style="float: left;">Pagar Banyu</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
