--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     <!-- Navbar Start -->
     <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="top-bar row gx-0 align-items-center d-none d-lg-flex">
-            <div class="col-lg-6 px-5 text-start">
+            <div class="col-lg-6 px-5 text-white">
                 <small><i class="fa fa-map-marker-alt me-2"></i>Desa Pagar Banyu, Kec. Kedurang Ilir, Kab. Bengkulu Selatan</small>
             </div>
             <div class="col-lg-6 px-5 text-end">
-                <small>Follow us:</small>
-                <a class="text-body ms-3" href="https://www.facebook.com/profile.php?id=100084469845368"><i class="fab fa-facebook-f"></i></a>
-                <a class="text-body ms-3" href="https://www.youtube.com/channel/UCHzJZ7xvKtmd1XHWfHVObyg"><i class="fab fa-youtube"></i></a>
-                <a class="text-body ms-3" href="https://instagram.com/desa_pagar_banyu?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+                <small class="text-white">Follow us:</small>
+                <a class="ms-3 text-white" href="https://www.facebook.com/profile.php?id=100084469845368"><i class="fab fa-facebook-f"></i></a>
+                <a class="ms-3 text-white" href="https://www.youtube.com/channel/UCHzJZ7xvKtmd1XHWfHVObyg"><i class="fab fa-youtube"></i></a>
+                <a class="ms-3 text-white" href="https://instagram.com/desa_pagar_banyu?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
             </div>
         </div>
 
@@ -66,7 +66,7 @@
                     <a href="Index.html" class="nav-item nav-link active">Home</a>
                     <a href="Profil-desa.html" class="nav-item nav-link">Profil Desa</a>
                     <a href="Pemerintahan.html" class="nav-item nav-link">Pemerintahan</a>
-                    <a href="#" class="nav-item nav-link">Galeri</a>
+                    <a href="Galeri.html" class="nav-item nav-link">Galeri</a>
                 </div>
             </div>
         </nav>
@@ -79,15 +79,12 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/header-image.jpg" alt="Image">
+                    <img class="w-100" src="img/header.png" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-lg-10">
-                                    <h3 class="display-2 animated slideInDown text-white">Desa Pagar Banyu</h3>
-                                    <h3 class="mb-5 animated slideInDown text-white">Kecamatan Kedurang Ilir Kabupaten Bengkulu Selatan</h3>
-                                    <a href="#feature" class="btn btn-primary rounded-pill py-sm-3 px-sm-5">Feature</a>
-                                    <a href="#about" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 ms-3">About Us</a>
+                                    
                                 </div>
                             </div>
                         </div>
