--- a/profil-desa.html
+++ b/profil-desa.html
@@ -47,10 +47,10 @@
     <!-- Navbar Start -->
     <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="top-bar row gx-0 align-items-center d-none d-lg-flex">
-            <div class="col-lg-6 px-5 text-start">
+            <div class="col-lg-6 px-5 text-start text-dark">
                 <small><i class="fa fa-map-marker-alt me-2"></i>Desa Pagar Banyu, Kec. Kedurang Ilir, Kab. Bengkulu Selatan</small>
             </div>
-            <div class="col-lg-6 px-5 text-end">
+            <div class="col-lg-6 px-5 text-end text-dark">
                 <small>Follow us:</small>
                 <a class="text-body ms-3" href="https://www.facebook.com/profile.php?id=100084469845368"><i class="fab fa-facebook-f"></i></a>
                 <a class="text-body ms-3" href="https://www.youtube.com/channel/UCHzJZ7xvKtmd1XHWfHVObyg"><i class="fab fa-youtube"></i></a>
@@ -70,7 +70,7 @@
                     <a href="Index.html" class="nav-item nav-link">Home</a>
                     <a href="Profil-desa.html" class="nav-item nav-link active">Profil Desa</a>
                     <a href="Pemerintahan.html" class="nav-item nav-link">Pemerintahan</a>
-                    <a href="#" class="nav-item nav-link">Galeri</a>
+                    <a href="Galeri.html" class="nav-item nav-link">Galeri</a>
                 </div>
             </div>
         </nav>
@@ -97,7 +97,7 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img position-relative overflow-hidden p-5 pe-0">
-                        <img class="img-fluid w-100" src="img/image-2.jpg">
+                        <img class="img-fluid w-100" src="img/masjid.jpeg">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
