--- a/Galeri.html
+++ b/Galeri.html
@@ -176,6 +176,42 @@
     </div>
     <!-- About End -->
 
+    <!-- About Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-5 align-items-center justify-content-center">
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+                    
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
+                    <img class="img-fluid w-100" src="img/1.jpg">
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+                    
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+                    <img class="img-fluid w-100" src="img/3.jpg">
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
+                    <img class="img-fluid w-100" src="img/2.jpg">
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+                    <img class="img-fluid w-100" src="img/4.jpg">
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+                    <img class="img-fluid w-100" src="img/6.jpg">
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
+                    <img class="img-fluid w-100" src="img/5.jpg">
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+                    <img class="img-fluid w-100" src="img/7.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- About End -->
+
     <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
