--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <a href="Index.html" class="nav-item nav-link active">Home</a>
-                    <a href="Profil-desa.html" class="nav-item nav-link">Profil Desa</a>
-                    <a href="Pemerintahan.html" class="nav-item nav-link">Pemerintahan</a>
-                    <a href="Galeri.html" class="nav-item nav-link">Galeri</a>
+                    <a href="Profil-desa.html" class="nav-item nav-link text-dark">Profil Desa</a>
+                    <a href="Pemerintahan.html" class="nav-item nav-link text-dark">Pemerintahan</a>
+                    <a href="Galeri.html" class="nav-item nav-link text-dark">Galeri</a>
                 </div>
             </div>
         </nav>
